fixed button overlapping dropdown bug

--- a/qencode5-portal/css/q6__tutorial.css
+++ b/qencode5-portal/css/q6__tutorial.css
@@ -454,7 +454,7 @@
     box-sizing: border-box;
     border-radius: 7px;
     padding: 10px 0;
-    z-index: 1;
+    z-index: 20;
 }
 
 .q6-tutorial-dd-selector__list > div{
